exports[`steinerHelper createDefaultState returns the custom state 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 50,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState returns the custom state even if a default is provided 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 15,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState returns the default state defined in the reducer 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 20,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper createDefaultState uses default values if defined 1`] = `
Object {
  "current": Object {
    "errorMessage": null,
    "isFetching": false,
    "item": null,
  },
  "list": Object {
    "errorMessage": null,
    "filters": Object {
      "orderDirection": "ASC",
      "orderKey": null,
      "page": 1,
      "perPage": 30,
      "q": "",
    },
    "isFetching": false,
    "itemsById": Object {},
    "itemsId": Array [],
    "selected": Array [],
    "total": 0,
  },
}
`;

exports[`steinerHelper getCreateActionsOptions returns actionMessages options if defined as messages 1`] = `
Object {
  "messages": Object {
    "en": Object {
      "createFail": "Hooray!",
      "createSuccess": "Boooo",
    },
  },
}
`;

exports[`steinerHelper getCreateActionsOptions returns undefined if no helper options are defined 1`] = `
Object {
  "messages": undefined,
}
`;
